Updated Chat Code Snippet

--- a/SupplierSupportChatDemo.html
+++ b/SupplierSupportChatDemo.html
@@ -44,15 +44,15 @@
     
             embedded_svc.init(
                 'https://coupa--fullcopy.my.salesforce.com',
-                'https://fullcopy-coupasoftware.cs36.force.com/public',
+                'https://fullcopy-coupasoftware.cs125.force.com/public',
                 gslbBaseURL,
-                '00D2h0000000jUT',
+                '00D3K0000000Oo5',
                 'Supplier_Chat_Support',
                 {
-                    baseLiveAgentContentURL: 'https://c.la3-c1cs-ph2.salesforceliveagent.com/content',
+                    baseLiveAgentContentURL: 'https://c.la1-c1cs-ia4.salesforceliveagent.com/content',
                     deploymentId: '5720z000000XZB0',
                     buttonId: '5730z000000XZDG',
-                    baseLiveAgentURL: 'https://d.la3-c1cs-ph2.salesforceliveagent.com/chat',
+                    baseLiveAgentURL: 'https://d.la1-c1cs-ia4.salesforceliveagent.com/chat',
                     eswLiveAgentDevName: 'EmbeddedServiceLiveAgent_Parent04I0z000000Gma9EAC_16b45ac91b9',
                     isOfflineSupportEnabled: true
                 }
