--- a/SupplierSupportChatDemo.html
+++ b/SupplierSupportChatDemo.html
@@ -39,6 +39,13 @@
             //embedded_svc.settings.fallbackRouting = []; //An array of button IDs, user IDs, or userId_buttonId
             //embedded_svc.settings.offlineSupportMinimizedText = '...'; //(Defaults to Contact Us)
     
+            embedded_svc.settings.extraPrechatFormDetails = [{
+                "label": "Language",
+                "value": "zh_CN",
+                "displayToAgent": true,
+                "transcriptFields": ["Language__c"]
+              }];
+
             embedded_svc.settings.enabledFeatures = ['LiveAgent'];
             embedded_svc.settings.entryFeature = 'LiveAgent';
     
