--- a/SupplierSupportChatDemo.html
+++ b/SupplierSupportChatDemo.html
@@ -42,8 +42,7 @@
             embedded_svc.settings.extraPrechatFormDetails = [{
                 "label": "Language",
                 "value": "zh_CN",
-                "displayToAgent": true,
-                "transcriptFields": ["Language__c"]
+                "displayToAgent": true
               }];
 
             embedded_svc.settings.enabledFeatures = ['LiveAgent'];
