--- a/SupplierSupportChatDemo.html
+++ b/SupplierSupportChatDemo.html
@@ -42,8 +42,15 @@
             embedded_svc.settings.extraPrechatFormDetails = [{
                 "label": "Language",
                 "value": "zh_CN",
-                "displayToAgent": true
-              }];
+                "displayToAgent": true,
+                "transcriptFields": ["Language__c"]
+              },
+              {
+                "label": "Advantage Supplier",
+                "value": "Yes",
+                "displayToAgent": true,
+                "transcriptFields": ["Is_Coupa_Advantage_Supplier__c"]
+            }];
 
             embedded_svc.settings.enabledFeatures = ['LiveAgent'];
             embedded_svc.settings.entryFeature = 'LiveAgent';
