--- a/SupplierSupportChatDemo.html
+++ b/SupplierSupportChatDemo.html
@@ -24,10 +24,8 @@
     <script type='text/javascript' src='https://service.force.com/embeddedservice/5.0/esw.min.js'></script>
     <script type='text/javascript'>
         var initESW = function (gslbBaseURL) {
-            let params = new URLSearchParams(document.location.search.substring(1));
-            let languageCode = params.get("language") || 'en';
             embedded_svc.settings.displayHelpButton = true; //Or false
-            embedded_svc.settings.language = languageCode; //For example, enter 'en' or 'en-US'
+            embedded_svc.settings.language = 'zh_CN'; //For example, enter 'en' or 'en-US'
 
             //embedded_svc.settings.defaultMinimizedText = '...'; //(Defaults to Chat with an Expert)
             //embedded_svc.settings.disabledMinimizedText = '...'; //(Defaults to Agent Offline)
@@ -46,8 +44,9 @@
 
             embedded_svc.settings.extraPrechatFormDetails = [{
                 "label": "Language",
-                "value": languageCode,
-                "transcriptFields": ["Language__c"]
+                "value": "zh_CN",
+                "displayToAgent": true,
+                "transcriptFields": ["Visitor_Language__c"]
             },
             {
                 "label": "First Name",
