--- a/SupplierSupportChatDemo.html
+++ b/SupplierSupportChatDemo.html
@@ -50,12 +50,15 @@
             },
             {
                 "label": "First Name",
+                "displayToAgent": true,
                 "transcriptFields": ["Visitor_FirstName__c"]
             }, {
                 "label": "Last Name",
+                "displayToAgent": true,
                 "transcriptFields": ["Visitor_LastName__c"]
             }, {
                 "label": "Email",
+                "displayToAgent": true,
                 "transcriptFields": ["Visitor_Email__c"]
             }];
 
